--- a/src/website/templates/website/home.html
+++ b/src/website/templates/website/home.html
@@ -758,7 +758,7 @@
                                                  aria-valuemin="0" aria-valuemax="100"></div>
                                         </div>
                                         <div class="offer_item_qty_num ps-2">
-                                            <span>Sold: <font>62/{{ product.quantity }}</font></span>
+                                            <span>Sold: <font>{{ product.total_sales }}/{{ product.quantity }}</font></span>
                                         </div>
                                     </div>
                                 </div>
