--- a/src/administration/admins/templates/admins/shipment_form.html
+++ b/src/administration/admins/templates/admins/shipment_form.html
@@ -3,11 +3,11 @@
 {% load static %}
 {% load crispy_forms_tags %}
 
-{% block base_subtitle %} Weight Form{% endblock %}
-{% block base_subhead_heading %} Weight &rAarr; Form {% endblock %}
+{% block base_subtitle %} Shipment Form{% endblock %}
+{% block base_subhead_heading %} Shipment &rAarr; Form {% endblock %}
 {% block base_subhead_paragraph %}{% endblock %}
 {% block base_subhead_button %}
-{#    <a href="{% url 'admins:order-detail' %}">&larr;&nbsp; Weight</a>#}
+{#    <a href="{% url 'admins:order-detail' %}">&larr;&nbsp; Shipment</a>#}
 {% endblock %}
 
 {% block base_content %}
