--- a/templates/website/include/footer.html
+++ b/templates/website/include/footer.html
@@ -69,8 +69,7 @@
                                     <li><a href="{% url 'client:dashboard' %}">My Account</a></li>
                                     <li><a href="{%  url 'website:cart' %}">Shopping Cart</a></li>
                                     <li><a href="{%  url 'website:wishlist_list' %}">Wishlist</a></li>
-                                    <li><a href="{%  url 'website:order' %}">Order History</a></li>
-                                    <li><a href="#!">International Orders</a></li>
+                                    <li><a href="{%  url 'client:order_list' %}">Order History</a></li>
                                  </ul>
                               </div>
                            </div>
