--- a/src/website/templates/website/home.html
+++ b/src/website/templates/website/home.html
@@ -3,6 +3,25 @@
 {% load static %}
 
 {% block content %}
+    <style>
+@media screen and (max-width: 1200px) {
+    .item_content {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .logo-upper {
+        height: 45px;
+        margin-bottom: 0; /* Adjust this according to your layout */
+    }
+
+    .logo-lower {
+        height: 80px;
+        margin-top: -45px; /* Adjust this according to your layout */
+    }
+}
+    </style>
 
     <!-- sidebar section end -->
 
@@ -77,9 +96,11 @@
                         data-slick='{"dots": false}'>
                     {% for object in top_categories %}
                         <div class="col item_content slider_item text-center" style="position:relative;"
+
                              data-aos="fade-up" data-aos-duration="300">
                             <a href="{% url 'website:shop' %}?category={{ object.id }}">
                                 <img style="height: 80px;margin-bottom: -45px;z-index: 1000;position:relative;"
+                                     class="logo-upper"
                                      src="{% static 'website/images/logo/logo.png' %}"
                                      alt="image_not_found">
                             </a>
@@ -92,8 +113,9 @@
                                 </div>
                             </div>
                             <a href="{% url 'website:shop' %}?category={{ object.id }}">
-                                <img style="height: 45px;margin-top: -45px;z-index: 1000;position:relative;"
+                                <img style="height: 45px;margin-top: -30px;z-index: 1000;position:relative;"
                                      src="{% static 'website/images/logo/Button.png' %}"
+                                     class="logo-lower"
                                      alt="image_not_found">
                             </a>
                         </div>
@@ -872,49 +894,49 @@
     </section>
 
     <!-- instagram section start -->
-    <section class="instagram_section instagram_style_1 sec_space_xs_70" data-aos="fade-up"
-             data-aos-duration="2000">
-        <div class="container">
-            <h2 class="instagram_title pb-5 text-center">Gallery</h2>
-            <ul class="zoom-gallery instagram_image_content ul_li">
-                <li>
-                    <a class="popup_image" href="{% static 'website/images/instagram/instagram1.png' %}">
-                        <img src="{% static 'website/images/instagram/instagram1.png' %}" alt="image_not_found">
-                        <i class="fas fa-eye"></i>
-                        <span>View</span>
-                    </a>
-                </li>
-                <li>
-                    <a class="popup_image" href="{% static 'website/images/instagram/instagram4.png' %}">
-                        <img src="{% static 'website/images/instagram/instagram4.png' %}" alt="image_not_found">
-                        <i class="fas fa-eye"></i>
-                        <span>View</span>
-                    </a>
-                </li>
-                <li>
-                    <a class="popup_image" href="{% static 'website/images/instagram/instagram3.png' %}">
-                        <img src="{% static 'website/images/instagram/instagram3.png' %}" alt="image_not_found">
-                        <i class="fas fa-eye"></i>
-                        <span>View</span>
-                    </a>
-                </li>
-                <li>
-                    <a class="popup_image" href="{% static 'website/images/instagram/instagram4.png' %}">
-                        <img src="{% static 'website/images/instagram/instagram4.png' %}" alt="image_not_found">
-                        <i class="fas fa-eye"></i>
-                        <span>View</span>
-                    </a>
-                </li>
-                <li>
-                    <a class="popup_image" href="{% static 'website/images/instagram/instagram5.png' %}">
-                        <img src="{% static 'website/images/instagram/instagram5.png' %}" alt="image_not_found">
-                        <i class="fas fa-eye"></i>
-                        <span>View</span>
-                    </a>
-                </li>
-            </ul>
-        </div>
-    </section>
+{#    <section class="instagram_section instagram_style_1 sec_space_xs_70" data-aos="fade-up"#}
+{#             data-aos-duration="2000">#}
+{#        <div class="container">#}
+{#            <h2 class="instagram_title pb-5 text-center">Gallery</h2>#}
+{#            <ul class="zoom-gallery instagram_image_content ul_li">#}
+{#                <li>#}
+{#                    <a class="popup_image" href="{% static 'website/images/instagram/instagram1.png' %}">#}
+{#                        <img src="{% static 'website/images/instagram/instagram1.png' %}" alt="image_not_found">#}
+{#                        <i class="fas fa-eye"></i>#}
+{#                        <span>View</span>#}
+{#                    </a>#}
+{#                </li>#}
+{#                <li>#}
+{#                    <a class="popup_image" href="{% static 'website/images/instagram/instagram4.png' %}">#}
+{#                        <img src="{% static 'website/images/instagram/instagram4.png' %}" alt="image_not_found">#}
+{#                        <i class="fas fa-eye"></i>#}
+{#                        <span>View</span>#}
+{#                    </a>#}
+{#                </li>#}
+{#                <li>#}
+{#                    <a class="popup_image" href="{% static 'website/images/instagram/instagram3.png' %}">#}
+{#                        <img src="{% static 'website/images/instagram/instagram3.png' %}" alt="image_not_found">#}
+{#                        <i class="fas fa-eye"></i>#}
+{#                        <span>View</span>#}
+{#                    </a>#}
+{#                </li>#}
+{#                <li>#}
+{#                    <a class="popup_image" href="{% static 'website/images/instagram/instagram4.png' %}">#}
+{#                        <img src="{% static 'website/images/instagram/instagram4.png' %}" alt="image_not_found">#}
+{#                        <i class="fas fa-eye"></i>#}
+{#                        <span>View</span>#}
+{#                    </a>#}
+{#                </li>#}
+{#                <li>#}
+{#                    <a class="popup_image" href="{% static 'website/images/instagram/instagram5.png' %}">#}
+{#                        <img src="{% static 'website/images/instagram/instagram5.png' %}" alt="image_not_found">#}
+{#                        <i class="fas fa-eye"></i>#}
+{#                        <span>View</span>#}
+{#                    </a>#}
+{#                </li>#}
+{#            </ul>#}
+{#        </div>#}
+{#    </section>#}
     <!-- instagram section end -->
 
     <script src="{% static 'website/js/magnific-popup.min.js' %}"></script>
