--- a/src/website/templates/website/home.html
+++ b/src/website/templates/website/home.html
@@ -215,7 +215,7 @@
                                             </div>
                                             <div class="product_content">
                                                 <h3 class="product_title">
-                                                    <a href="{% url 'website:product-detail' 0 %}"
+                                                    <a href="{% url 'website:product-detail' product.pk %}"
                                                        target="_blank">{{ product.title }}</a>
                                                 </h3>
                                                 <div class="product_price">
@@ -279,7 +279,7 @@
                                             </div>
                                             <div class="product_content">
                                                 <h3 class="product_title">
-                                                    <a href="{% url 'website:product-detail' 0 %}"
+                                                    <a href="{% url 'website:product-detail' product.pk %}"
                                                        target="_blank">{{ product.title }}</a>
                                                 </h3>
                                                 <div class="product_price">
@@ -343,7 +343,7 @@
                                             </div>
                                             <div class="product_content">
                                                 <h3 class="product_title">
-                                                    <a href="{% url 'website:product-detail' 0 %}"
+                                                    <a href="{% url 'website:product-detail' product.pk %}"
                                                        target="_blank">{{ product.title }}</a>
                                                 </h3>
                                                 <div class="product_price">
@@ -407,7 +407,7 @@
                                             </div>
                                             <div class="product_content">
                                                 <h3 class="product_title">
-                                                    <a href="{% url 'website:product-detail' 0 %}"
+                                                    <a href="{% url 'website:product-detail' product.pk %}"
                                                        target="_blank">{{ product.title }}</a>
                                                 </h3>
                                                 <div class="product_price">
@@ -471,7 +471,7 @@
                                             </div>
                                             <div class="product_content">
                                                 <h3 class="product_title">
-                                                    <a href="{% url 'website:product-detail' 0 %}"
+                                                    <a href="{% url 'website:product-detail' product.pk %}"
                                                        target="_blank">{{ product.title }}</a>
                                                 </h3>
                                                 <div class="product_price">
@@ -535,7 +535,7 @@
                                             </div>
                                             <div class="product_content">
                                                 <h3 class="product_title">
-                                                    <a href="{% url 'website:product-detail' 0 %}"
+                                                    <a href="{% url 'website:product-detail' product.pk %}"
                                                        target="_blank">{{ product.title }}</a>
                                                 </h3>
                                                 <div class="product_price">
@@ -705,7 +705,7 @@
                                 </div>
                                 <div class="product_content">
                                     <h3 class="product_title">
-                                        <a href="{% url 'website:product-detail' 0 %}"
+                                        <a href="{% url 'website:product-detail' product.pk %}"
                                            target="_blank">{{ product.title }}</a>
                                     </h3>
                                     <div class="product_price">
