Feat:Design and logo changes

--- a/templates/website/include/header.html
+++ b/templates/website/include/header.html
@@ -34,7 +34,7 @@
             <div class="webMenu d-none d-lg-block position-relative">
                 <nav class="navbar navbar-expand-lg navbar-light">
                     <a class="navbar-brand position-relative" href="{% url 'website:home' %}">
-                        <img style="height: 60px" src="{% static 'website/images/logo/logo.png' %}"
+                        <img style="height: 60px" src="{% static 'final_logo.png' %}"
                              alt="image_not_found"></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                             data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -95,7 +95,7 @@
             <div class="mobileMenu d-block d-lg-none">
                 <nav class="navbar navbar-expand-lg navbar-light">
                     <a class="navbar-brand" href="{% url 'website:home' %}"><img style="height: 100px"
-                                                                                 src="{% static 'website/images/logo/logo.png' %}"
+                                                                                 src="{% static 'final_logo.png' %}"
                                                                                  alt="image_not_found"></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
                             data-bs-target="#offcanvasScrolling" aria-controls="offcanvasScrolling"
