--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -14,7 +14,7 @@
     <section class="login-page section-b-space">
         <div class="container">
             <div class="row justify-content-center my-4">
-                <div class="col-5 card my-4">
+                <div class="col-12 col-md-6 card my-4">
                     <div class="theme-card">
                         <div class="p-2">
                             <h4 class="text-center mt-4">Login & Signup Form</h4>
